<resources>
    <string name="app_name">Avaliação do Docente</string>
    <string name="share_activity_label">Add file</string>
    <string name="service_chooser_label">Connect services</string>
    <string name="title_activity_list">ListActivity</string>

    <string name="shared_prefs_user">services</string>
    <string name="dropbox_app_key">glwb2lyyikpo7de</string>
    <string name="dropbox_app_secret">8xhivwv4yq5bgga</string>
    <string name="meo_consumer_key">8eb23961-0b47-46c7-b3ba-a15187103118</string>
    <string name="meo_app_secret">327526132662230807532020078626020574174</string>

    <string name="loading_categories">Loading Criteria…</string>
    <string name="button_undo">Undo</string>
    <string name="img_thumb">Image thumbnail</string>
    <string name="title_activity_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="disconnect">Disconnect</string>

    // LOGIN
    <string name="register">Register</string>
    <string name="login_title">Avaliação Desempenho de Docentes</string>
    <string name="evaluation_period_title">Evaluation Period</string>
    <string name="empty_name_message">Name must be filled</string>
    <string name="date_error_message">Start date must come before end date</string>

    // HOME
    <string name="home_title">Dashboard</string>
    <string name="hint_missing_evaluation_period">You need an evaluation period!</string>

    // SETTINGS
    <string name="settings_title">Settings</string>
    <string name="settings_user_info_title">User Info</string>
    <string name="settings_evaluation_periods_text">Evaluation Periods</string>
    <string name="settings_evaluation_periods_options">Show/delete Periods</string>
    <string name="settings_meo_cloud_text">Connect MEO Cloud</string>
    <string name="settings_dropbox_text">Connect Dropbox</string>
    <string name="settings_calendar_icon_desc">Settings calendar icon</string>
    <string name="settings_meo_cloud_state_desc">Settings MEOCloud state</string>
    <string name="settings_meo_cloud_icon_desc">Settings MEOCloud icon</string>
    <string name="settings_dropbox_state_desc">Settings Dropbox state</string>
    <string name="settings_dropbox_icon_desc">Settings Dropbox icon</string>
    <string name="settings_default_account_name">Anonymous</string>
    <string name="settings_services_title">Services</string>


    <string-array name="departments">
        <item>Ciências Jurídicas</item>
        <item>Ciências da Linguagem</item>
        <item>Engenharia do Ambiente</item>
        <item>Engenharia Civil</item>
        <item>Engenharia Electrotécnica</item>
        <item>Engenharia Informática</item>
        <item>Engenharia Mecânica</item>
        <item>Gestão e Economia</item>
        <item>Matemática</item>
    </string-array>

    <string-array name="default_tags">
        <item>projeto</item>
        <item>exemplo</item>
        <item>visual</item>
        <item>relatorio</item>
        <item>report</item>
        <item>anexos</item>
        <item>programaçao</item>
        <item>design</item>
    </string-array>

    <!-- Google Sign-in strings -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="google_title_text">Google Sign-In</string>
    <string name="loading">Loading…</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="open_google_sign_in">Open Google Sign In</string>
    <string name="account_syncing_status">Synced: %1$s</string>
    <string name="google_sign_in_helper">Sign in with Google to sync data</string>
    <string name="edit_email_desc">You can use the verified emails to send files to projectaddestg@gmail.com and receive them in the app</string>


    <string name="number_of_emails">%d email(s)</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="invalid_email">Email invalid</string>
    <string name="filename_format">File: %1$s</string>
    <string name="num_files">%d file(s)</string>
    <string name="num_deleted_files">%d deleted file(s)</string>
    <string name="num_items">%d item(s)</string>
    <string name="num_deleted_items">%d deleted item(s)</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>
    <string name="no_items_add">Add a new item</string>
    <string name="no_deleted_items">You have no deleted items!</string>
    <string name="no_items">You have no items!</string>
    <string name="no_pending_files">You have no pending files!</string>
    <string name="no_connected_services">To add pending files you must \nconnect a service in Settings</string>
    <string name="anonymous_name">Anonymous</string>
    <string name="add_new_item">Add new item</string>
    <string name="settings_activity_title">Settings</string>
    <string name="google_activity_title">Google Sign In</string>
    <string name="signed_out_text">Signed out</string>
    <string name="deleted_files_top_banner">Showing deleted files</string>
    <string name="no_period">You must create a period in the menu to continue!</string>
    <string name="file_provider">From: %s</string>


</resources>
