<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="42dp"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textStyle="bold"
            android:textSize="22sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:ems="10"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:imeOptions="actionDone"
                android:focusable="true"
                android:hint="Name"
                android:textColor="@color/primary_text" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:entries="@array/departments" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:paddingBottom="12dp"
            android:text="@string/evaluation_period_title"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/start_date"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:focusable="false"
                    android:longClickable="false"
                    android:hint="Start"
                    android:textColor="@color/primary_text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/end_date"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:focusable="false"
                    android:longClickable="false"
                    android:hint="End"
                    android:textColor="@color/primary_text" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/date_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:textSize="18sp"
            android:textColor="@color/red"
            android:text="@string/date_error_message"/>

        <Button
            android:id="@+id/register"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:background="@color/blue_grey_700"
            android:text="@string/register"
            android:textColor="@color/white" />

    </LinearLayout>
</RelativeLayout>